<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_shopping_basket_foreground"
        app:showAsAction="always"/>

    <item
        android:id="@+id/cart"
        android:title="@string/shopping_cart"
        android:icon="@drawable/ic_cart_foreground"
        app:showAsAction="always"
        app:actionLayout="@layout/cart_item_number"/>

    <item
        android:id="@+id/favourite"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favourite_foreground"
        app:showAsAction="always"
        app:actionLayout="@layout/favourite_item_number"/>
    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/logout"
        android:title="@string/kijelentkez_s"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/home"
        android:title="@string/kezd_lap"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profil"
        android:orderInCategory="3"/>
</menu>