<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="?android:textColorSecondary"/>

        <TextView
            android:id="@+id/itemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:padding="4dp"
            android:text="@string/item_info_placeholder" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemInfo"
            android:layout_marginBottom="0dp"
            android:padding="4dp"
            android:textColor="@color/green"
            android:text="@string/item_prize_placeholder"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemPrice"
            android:layout_centerHorizontal="true"
            android:text="@string/kos_rba"
            android:layout_marginBottom="30dp"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>